# user-management-task

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
core/: database.py  settings.py  utils.py
migrations/: env.py
migrations/versions/: 2c1c491108c8_create_users_table.py  384df39d177f_create_users_table.py  eeb5bc3103d4_add_avatar_field_to_users.py
src/users/: models.py  routes.py  schemas.py  validators.py
tests/: conftest.py  test_users.py
